--- a/.github/workflows/youtube-dl.yml
+++ b/.github/workflows/youtube-dl.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     if: contains(github.event.issue.labels.*.name, 'youtube-dl') # issues 的 label 包含 youtube-dl 时候运行
     steps:
-      - name: Clone repository
+      - name:  Check out code
         uses: actions/checkout@v4
       # 2. 下载
       - name: Downlaod
